Version 2.1.182
    Players now receive XP from harvesting Sweet Berry bushes (double XP for harvesting fully grown berries)
    Sweet Berry Bush will no longer ready tools for Super Abilities
    You can now use '.all' (for example: mcmmo.perks.xp.customboost.all) to give an XP perk to all skills
    Removed hardcore and vampirism commands, these commands are dangerous, just modify the config file if you want to use hardcore / vampirism
    Fixed several errors in de locale (Thanks TheBusyBiscuit & w1tcherrr)
    Fixed a bug where double smelt never succeeded if the furnace was empty (but worked normally afterwards)
    Added some safety so that mcMMO automatic save interval is never more frequent than 1 minute
    Removed a few silent exceptions for scoreboards & mcMMO
    Added warning about UltraPermissions to mcMMO
    Fixed a potential NPE in McMMOPlayerExperienceEvent
    Added Sweet Berry Bush to config.yml bonus drops for Herbalism

    NOTES:
    mcMMO will do a better job reporting if something went wrong with scoreboards, which may lead to improved plugin compatibility between mcMMO and other plugins touching scoreboards.

Version 2.1.181
    mcMMO no longer pointlessly tries to check for missing UUIDs for FlatFile database
    Removed the "name change detected" message as some plugins (such as Plan) invoke API calls which spams the console with this message
    Refactored code related to loading player data from the database
    (API) Added DatabaseManager::loadPlayerProfile(String)
    (API) Removed DatabaseManager::loadPlayerProfile(String, UUID, boolean)
    (API) Removed DatabaseManager::loadPlayerProfile(String, boolean)

Version 2.1.180
    mcMMO will now automatically remove corrupted data from mcmmo.users instead of catastrophic failure
    When using FlatFile database (the default) mcMMO will try its best to inform you which players had corrupted data when it does repairs
    Various minor optimizations and tweaks to the FlatFile database