@@ -1,4 +1,5 @@
 Version 2.1.182
+    Fixed a NPE with Scoreboards enabled when trying to update scoreboards
     Players now receive XP from harvesting Sweet Berry bushes (double XP for harvesting fully grown berries)
     Sweet Berry Bush will no longer ready tools for Super Abilities
     You can now use '.all' (for example: mcmmo.perks.xp.customboost.all) to give an XP perk to all skills
